# ELA_DP

./: .dockerignore  .gitignore  .pre-commit-config.yaml  2025_10_06_23_54_garmin_weight.jsonl  2025_10_06_23_55_garmin_weight.jsonl  2025_10_07_00_03_garmin_weight.jsonl  2025_10_07_00_07_garmin_weight.jsonl  2025_10_07_00_13_garmin_weight.jsonl  =0.18.0  AGENTS.md  ARCHITECTURE_ANALYSIS_CONNECTORS.md  ARCHITECTURE_HYBRID.md  CLAUDE.md  DBT_INCREMENTAL_STRATEGY.md  Dockerfile  GARMIN_HISTORICAL_INGESTION.md  GARMIN_IMPLEMENTATION_TODO.md  INGESTION_ORCHESTRATOR.md  INGESTION_PIPELINE_IMPLEMENTATION.md  MULTI_ENVIRONMENT_SETUP.md  Makefile  README.md  docker-entrypoint.sh  export_to_gcs.py  feedback_codex.md  garmin_schemas_analysis.md  ingestion-config-dev.yaml  ingestion-config-prd.yaml  ingestion-config.yaml  main.py  nested_arrays_transformation_plan.md  pyproject.toml  splendid-frolicking-goose.md  spotify_recently_played_raw_20250707_232617.json  sum_up_dataplatform.md  test.py  test_ingestion_config.py  test_ingestion_config_multi.py
.gemini/: ANALYSIS_REPORT.md  GARMIN_ANALYSIS.md  GARMIN_CONNECTOR_DOCS.md
.github/instructions/: python.instructions.md
.github/workflows/: cd-deploy-api.yaml  cd.yaml  ci.yaml  clean_docker_registry.yaml  data-ingestion-dev.yaml  data-ingestion-orchestrator.yaml  data-ingestion-prd.yaml  spotify_dev_fetch.yaml  spotify_dev_ingest.yaml  spotify_dev_saved_tracks.yaml  spotify_prd_fetch.yaml  spotify_prd_ingest.yaml  spotify_to_gcs.yaml
api/: config.py  database.py  main.py
api/models/: activities.py  ai_coach.py  artist_focus.py  homepage.py  music.py
api/routers/: activities.py  ai_coach.py  artist_focus.py  homepage.py  music.py
connectors/: settings.yaml  spotify.py  strava.py  strava_dump.py  strava_tokens.json  todoist.py  utils.py
connectors/spotify/: spotify_fetch.py  spotify_ingest.py
infra/: .gitignore  MIGRATION_GUIDE.md  QUICKSTART.md  README.md
infra/schedulers/: deploy_schedulers.py  schedulers.json  schedulers.yaml
infra/scripts/: setup.sh  tf-helper.sh
infra/terraform/shared/: main.tf  (+2 more)
infra/workflows/: garmin-daily.yaml  spotify-hot.yaml  spotify-pipeline-v2.yaml  spotify-pipeline.yaml
scripts/: create_dbt_jobs.sh  create_jobs.sh  generate.sh  process_legacy_files.py  run-all-cloudrun.sh  run_all_jobs.sh  run_garmin_pipeline.py  test-local.sh
src/: orchestrator.py
src/connectors/: .spotify-cache  utils.py
src/dbt_dataplatform/: .user.yml  dbt_project.yml  profiles.yml
src/utils/: bq_auto_ingest.py  gcs.py  gcs_upload.py
tests/: reproduce_schema_evolution.py  test_chunking.py  test_date_serialization.py  test_simple.py
tests/connectors/: test_strava.py  test_todoist.py
(+389 files in other folders)
