[project]
name = "ela-dp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "google-cloud-storage>=3.1.1",
    "ipykernel>=6.29.5",
    "npx>=0.1.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pre-commit>=4.2.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "spotipy>=2.25.1",
    "stravalib>=2.4",
    "types-requests>=2.32.4.20250611",
]
